--- a/index.html
+++ b/index.html
@@ -1,3 +1,98 @@
-test
-test2
-test3
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=>, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <h1>This is heading</h1>
+    <h2>This is heading</h2>
+    <h3>This is heading</h3>
+    <h4>This is heading</h4>
+    <h5>This is heading</h5>
+    <h6>This is heading</h6>
+
+    <p>this is paragraph</p>
+    <hr />
+    <a href="https://www.google.com/"> <button>click</button></a>
+    <a href="./link.html">link to another html file</a>
+    <a href="./day01/index.html">index.html</a>
+    <hr>
+    <img src="http://t0.gstatic.com/images?q=tbn:ANd9GcRk7Bxyu1XH2IvSSySAR3VbvRuiyooZUyrreCHlcOehKYvLWwZOcIsGGGONshgCjnpk8DlphKR77YHoqCSfz0o"
+        alt="sea">
+    <button>click</button>
+
+    <ul>
+        <li><img src="http://t0.gstatic.com/images?q=tbn:ANd9GcRk7Bxyu1XH2IvSSySAR3VbvRuiyooZUyrreCHlcOehKYvLWwZOcIsGGGONshgCjnpk8DlphKR77YHoqCSfz0o"
+            alt="sea"></li>
+        <li>List 2</li>
+        <li>List 3</li>
+        <li>List 4</li>
+        <li>List 5</li>
+    </ul>
+    <ol>
+        <li>List 1</li>
+        <li>List 2</li>
+        <li>List 3</li>
+        <li>List 4</li>
+        <li>List 5</li>
+    </ol>
+    <hr />
+    <div>content</div>
+    <div>content</div>
+    <div>content</div>
+    <span>content</span>
+    <span>content</span>
+    <span>content</span>
+
+    <table>head of table
+
+        <head>
+            <tr>
+                <th>head of table</th>
+                <th>head of table</th>
+                <th>head of table</th>
+                <th>head of table</th>
+                <td>head of table</td>
+            </tr>
+
+        <body>
+            <tr>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+            </tr>
+            <tr>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+            </tr>
+            <tr>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+
+            </tr>
+        </body>
+        </head>
+    </table>
+
+    <form action=""></form>
+    <input type="text"> <br>
+    <input type="checkbox"> <br>
+    <input type="time"> <br>
+    <input type="image"> <br>
+    <input type="email"> <br>
+    <input type="password"> <br>
+
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni non eos id nihil ut labore laborum eius reprehenderit obcaecati amet.</p>
+
+</body>
+
+</html>
